[package]
name = "photo_kaonstar"
version = "0.7.0"
authors = ["Aldey Wahyu Putra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unroll = "0.1.5"
hep-framework = { git = "https://github.com/hello-wahyu/hep-framework", branch = "main" }
helper_macros = { path = "../helper/macros" }